# langchain-experiments

./: .gitignore  agent.ipynb  agents.py  chat.ipynb  demo.ipynb  index.faiss  index.pkl  ollama_test.py  promptfoo_example.py  pyproject.toml  routers.py  routing_ollama.py  routing_openai.py
