[tool.poetry]
name = "langchain-experiments"
version = "0.1.0"
description = ""
authors = ["Michael Polonskij <michael.polonskij@gmx.de>"]
readme = "README.md"
packages = [{include = "langchain_experiments"}]

[tool.poetry.dependencies]
python = "^3.11"
openai = "^1.12.0"
jupyter = "^1.0.0"
langchain = "^0.1.9"
langchain-openai = "^0.0.7"
pyprojroot = "^0.3.0"
pypdf = "^4.0.2"
chromadb = "^0.4.23"
faiss-cpu = "^1.7.4"
pylint = "^3.1.0"
duckduckgo-search = "^5.3.0"
nbqa = "^1.8.5"
loguru = "^0.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
