[tool.poetry]
name = "langchain-experiments"
version = "0.1.0"
description = ""
authors = ["Michael Polonskij <michael.polonskij@gmx.de>"]
readme = "README.md"
packages = [{include = "langchain_experiments"}]

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.2.0"
langchain-experimental = "^0.0.59"
openai = "^1.30.1"
jupyter = "^1.0.0"
pyprojroot = "^0.3.0"
pypdf = "^4.2.0"
chromadb = "^0.5.0"
faiss-cpu = "^1.8.0"
pylint = "^3.2.2"
duckduckgo-search = "^6.1.0"
nbqa = "^1.8.5"
loguru = "^0.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
